samples/_failures_safe/1761460695_fbe0fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4dab675a.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_4dab675a.c:155:19: error: expected ‘;’ at end of input
  155 |         token.type
      |                   ^
      |                   ;
./samples/SAFE/__tmp_4dab675a.c:155:9: error: expected declaration or statement at end of input
  155 |         token.type
      |         ^~~~~
./samples/SAFE/__tmp_4dab675a.c:155:9: error: expected declaration or statement at end of input
